This file documents the revision history for Perl extension Catalyst.

        - Removed Test::WWW::Mechanize::Catalyst from Makefile.PL (circular dep)
        - Updated docs for Catalyst::Component
        - Separated execute and dispatch on Catalyst::Action
        - cleaned up logging and debug output
        - minor doc fixes
        - Added warning for setup being called twice
        - Fix pod to use DBIC::Schema instead of DBIC model
        - Fix ->config failing to copy _config for subclassing
        - ConfigLoader: Updated to version 0.07
        - Updated log format
        - Updated debug dump

5.6902  2006-05-04 13:00:00
        - Remove tarballs and OSX metadata files.

5.6901  2006-05-03 11.17:00
        - Module::Install didn't overwrite META.yml. 

5.6900  2006-05-03 11.17:00
        - Stupid pause indexer can't count.
        - Better fix for Catalyst::Test
        - more tests.

5.682   2006-04-27 13:51:00
        - Damn OSX attributes again :( 

5.681   2006-04-27 08:47:00
        - Updated manifest.
        - Add basename to core . (Deprecates Catalyst::Plugin::Basename)
    
5.68    2006-04-26 12:23:00
        - ConfigLoader: Updated to version 0.06
        - fixed undef warnings in uri_for() and uri_with()
	- Fixed Catalyst::Test to report errors on failed Class load

5.678   2006-04-24 12:30:00
        - Re-release of 5.67 without OSX metadata files.

5.67    2006-04-23 08:50:00
        - Added $c->req->uri_with() helper
        - ConfigLoader: Updated to version 0.05
        - Fix up Engine to avoid a new 5.8.8 warning
        - Added app name with :: support for PAR
        - Added $c->models/views/controllers
        - Static::Simple: Unescape the URI path before looking for the file.
          This fixes issues with files that have spaces.
        - Looping and recursion tests plus a fix
        - Added lots of API documentation. Refactored main pod.
        - Changed default behaviors for $c->model/$c->controller/$c->view