@@ -1,5 +1,6 @@
 This file documents the revision history for Perl extension Catalyst.
 
+        - Added ActionClass attribute
         - Removed Test::WWW::Mechanize::Catalyst from Makefile.PL (circular dep)
         - Updated docs for Catalyst::Component
         - Separated execute and dispatch on Catalyst::Action
